--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+    <title>My Little Rainbow</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+<!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
-    
+
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> Red
+      <div id="orange"> Orange
+        <div id="yellow"> Yellow
+          <div id="green"> Green
+            <div id="indigo"> Aqua
+              <div id="blue"> Blue
+                <div id="purple"> Purple </div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
 
   </body>
 
